Configure dashboard menu. Fix taxonomies fixtures and comment produnc & order fixtures.

--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/layout.html.twig
@@ -57,9 +57,9 @@
                 {# Confirmation modal #}
                 {% include 'SyliusWebBundle::confirm-modal.html.twig' %}
 
-                <footer>
+                {# <footer>
                     <p>&copy; <a href="http://Sylius.org">Sylius</a>, 2011 - {{ 'now'|date('Y') }}.</p>
-                </footer>
+                </footer> #}
                 </div>
             </div>
         </div>
