--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Dashboard/main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Dashboard/main.html.twig
@@ -48,12 +48,12 @@
 
 <div class="row">
     <div class="col-md-6">
-        {{ list_orders(orders) }}
-        <a href="{{ path('sylius_backend_order_index') }}" class="btn btn-primary btn-block"><i class="glyphicon glyphicon-shopping-cart"></i> {{ 'sylius.show_all'|trans }}</a>
+        {# {{ list_orders(orders) }} #}
+        {# <a href="{{ path('sylius_backend_order_index') }}" class="btn btn-primary btn-block"><i class="glyphicon glyphicon-shopping-cart"></i> {{ 'sylius.show_all'|trans }}</a> #}
     </div>
     <div class="col-md-6">
-        {{ list_users(users) }}
-        <a href="{{ path('sylius_backend_user_index') }}" class="btn btn-primary btn-block"><i class="glyphicon glyphicon-user"></i> {{ 'sylius.show_all'|trans }}</a>
+        {# {{ list_users(users) }} #}
+        {# <a href="{{ path('sylius_backend_user_index') }}" class="btn btn-primary btn-block"><i class="glyphicon glyphicon-user"></i> {{ 'sylius.show_all'|trans }}</a> #}
     </div>
 </div>
 {% endblock %}
