--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Taxonomy/_form.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Taxonomy/_form.html.twig
@@ -1,6 +1,6 @@
 <fieldset>
     {{ form_row(form.name, {'attr': {'class': 'input-lg'}}) }}
-    {{ form_row(form.file) }}
+    {# {{ form_row(form.file) }} #}
     <br>
 </fieldset>
 
