--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Taxon/_form.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Taxon/_form.html.twig
@@ -2,7 +2,7 @@
     {{ form_row(form.name, {'attr': {'class': 'input-lg'}}) }}
     {{ form_row(form.parent, {'attr': {'class': 'input-lg'} }) }}
     {{ form_row(form.permalink, {'attr': {'class': 'input-lg'} }) }}
-    {{ form_row(form.file) }}
+    {# {{ form_row(form.file) }} #}
     <br>
     {{ form_row(form.description) }}
 </fieldset>
