--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
@@ -4,14 +4,14 @@
     {{ form_row(form.shortDescription, {'attr': {'class': 'input-lg', 'rows': 3}}) }}
     {{ form_row(form.masterVariant.sku) }}
     <hr />
-    {{ form_label(form.masterVariant.availableOn) }}
-    {{ form_widget(form.masterVariant.availableOn, {'label': false}) }}
-    {{ form_row(form.masterVariant.availableOnDemand) }}
-    {{ form_row(form.restrictedZone) }}
+    {#  {{ form_label(form.masterVariant.availableOn) }}
+    {{ form_widget(form.masterVariant.availableOn, {'label': false}) }} #}
+    {# {{ form_row(form.masterVariant.availableOnDemand) }} #}
+    {# {{ form_row(form.restrictedZone) }} #}
     {{ form_row(form.masterVariant.price) }}
-    {{ form_row(form.masterVariant.onHand) }}
-    <hr />
-    {{ form_row(form.taxCategory) }}
-    {{ form_row(form.shippingCategory) }}
-    {{ form_row(form.variantSelectionMethod) }}
+    {# {{ form_row(form.masterVariant.onHand) }} #}
+    {# <hr /> #}
+    {# {{ form_row(form.taxCategory) }} #}
+    {# {{ form_row(form.shippingCategory) }} #}
+    {# {{ form_row(form.varaintSelectionMethod) }} #}
 </div>
