--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/show.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/show.html.twig
@@ -62,10 +62,10 @@
                     <td>{{ 'sylius.product.name'|trans }}</td>
                     <td>{{ product.name }}</td>
                 </tr>
-                <tr>
+                {# <tr>
                     <td>{{ 'sylius.product.available_on'|trans }}</td>
                     <td><span class="label label-{{ product.available ? 'success' : 'danger' }}">{{ product.availableOn|date }}</span></td>
-                </tr>
+                </tr> #}
                 <tr>
                     <td>{{ 'sylius.product.options'|trans }}</td>
                     <td>
@@ -98,15 +98,15 @@
                         {% endif %}
                     </td>
                 </tr>
-                <tr>
+               {#  <tr>
                     <td>{{ 'sylius.product.tax_category'|trans }}</td>
                     <td>{{ product.taxCategory|default('sylius.product.no_tax_category'|trans) }}</td>
                 </tr>
                 <tr>
                     <td>{{ 'sylius.product.shipping_category'|trans }}</td>
                     <td>{{ product.shippingCategory|default('sylius.product.no_shipping_category'|trans) }}</td>
-                </tr>
-                <tr>
+                </tr> #}
+                {# <tr>
                     <td>{{ 'sylius.product.available_on_demand'|trans }}</td>
                     <td>
                         {{ misc.state_label(product.masterVariant.availableOnDemand) }}
@@ -119,11 +119,11 @@
                             <a href="{{ path('sylius_backend_zone_show', {'id': product.restrictedZone.id}) }}">{{ product.restrictedZone.name }}</a>
                         </td>
                     </tr>
-                {% endif %}
-                <tr>
+                {% endif %} #}
+                {# <tr>
                     <td>{{ 'sylius.product.stock'|trans }}</td>
                     <td><span class="label label-{{ product.masterVariant.inStock ? 'success' : 'important' }}">{{ product.masterVariant.onHand }}</span></td>
-                </tr>
+                </tr> #}
                 <tr>
                     <td>{{ 'sylius.product.price'|trans }}</td>
                     <td>{{ product.masterVariant.price|sylius_price }}</td>
