--- a/src/Sylius/Bundle/WebBundle/Resources/views/forms.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/forms.html.twig
@@ -24,7 +24,7 @@
 
 {% block form_label %}
 {% spaceless %}
-    {% set label_attr = label_attr|merge({'class': label_attr.class|default('') ~ ' control-label col-lg-2'}) %}
+    {% set label_attr = label_attr|merge({'class': label_attr.class|default('') ~ ' control-label col-lg-3'}) %}
     {{ parent() }}
 {% endspaceless %}
 {% endblock form_label %}
@@ -89,7 +89,7 @@
 {% spaceless %}
     <div class="form-group{% if errors|length > 0 %} has-error{% endif %}">
         {{ form_label(form) }}
-        <div class="col-lg-10">
+        <div class="col-lg-9">
         {{ form_widget(form) }}
         {% for error in errors %}
             <span class="help-block form-error">
@@ -132,3 +132,43 @@
         </div>
     {% endspaceless %}
 {% endblock %}
+
+{# {% block collection_widget %}
+{% spaceless %}
+    {% if prototype is defined %}
+        {% set attr = attr|merge({'data-prototype': form_row(prototype) }) %}
+    {% endif %}
+    <div id="collection-{{ form.vars.name }}" {{ block('widget_container_attributes') }}>
+        {% if form.parent is empty %}
+            {{ form_errors(form) }}
+        {% endif %}
+        {% for child in form %}
+            <div id="collection-item-{{ child.vars.name }}" class="form-group">
+                <div class="col-lg-9">
+                    <div class="input-group">
+                        {{ form_widget(child) }}
+                        <span class="input-group-btn">
+                            <a href="#"
+                                class="btn btn-danger btn-sm"
+                                data-collection-button="delete"
+                                data-dismiss="{{ child.vars.name }}">
+                                <i class="glyphicon glyphicon-trash only-icon"></i>
+                            </a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    {# Collection add btn # }
+    <a href="#"
+        class="btn btn-primary btn-block"
+        data-collection-button="add"
+        data-prototype="collection-{{ form.vars.name }}"
+        data-collection="collection-{{ form.vars.name }}"
+    >
+        {{ "sylius.form.option_value.add_value"|trans }}
+    </a>
+{% endspaceless %}
+{% endblock collection_widget %} #}
