--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Option/_form.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Option/_form.html.twig
@@ -7,24 +7,7 @@
     </div>
 
     <div class="col-md-5">
-        <div id="sylius-option-values" class="collection-container" data-prototype="{{ form_row(form.values.vars.prototype.value, {'label': ''})|e }}">
-            {% for valueForm in form.values %}
-                <div id="sylius-option-values-value" class="form-group">
-                    {{ form_label(valueForm.value) }}
-                    <div class="col-lg-9">
-                        <div class="input-group">
-                            {{ form_widget(valueForm.value) }}
-                            {# <span class="input-group-btn">
-                                <a href="#" class="btn btn-danger btn-sm" data-collection-button="delete" data-dismiss="sylius-option-values-value">
-                                    <i class="glyphicon glyphicon-trash only-icon"></i>
-                                </a>
-                            </span> #}
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <a href="#" class="btn btn-primary btn-block" data-collection-button="add" data-prototype="sylius-option-values" data-collection="sylius-option-values">{{ "sylius.form.option_value.add_value"|trans }}</a>
+        {{ form_widget(form.values) }}
     </div>
 </div>
 <hr>
