--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/macros.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/macros.html.twig
@@ -78,7 +78,7 @@
                 {{ product.updatedAt|date('Y/m/d') }}
             </td>
             <td class="actions text-right">
-                <div class="btn-group">
+                <div>
                     <a class="btn btn-sm btn-primary edit" href="{{ path('sylius_backend_product_update', {'id': product.id}) }}"
                         title="{{ 'sylius.edit'|trans|title }}">
                         <span class="glyphicon glyphicon-pencil"></span> {{ 'sylius.edit'|trans|title }}
@@ -86,7 +86,7 @@
                     <a class="btn btn-sm btn-danger delete"
                        href="{{ path('sylius_backend_product_delete', {'id': product.id}) }}"
                        title="{{ 'sylius.delete'|trans|title }}">
-                        <span class="glyphicon glyphicon-trash"></span> {{ 'sylius.delete'|trans|title }}
+                        <span class="glyphicon glyphicon-trash only-icon"></span>
                     </a>
                 </div>
             </td>
