--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Settings/general.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Settings/general.html.twig
@@ -17,9 +17,10 @@
 {{ form_errors(form) }}
 
 <form action="{{ path('sylius_backend_general_settings') }}" method="post" class="form-horizontal" novalidate>
-    {{ form_row(form.title, {'attr': {'class': 'input-lg'}}) }}
-    {{ form_row(form.meta_keywords, {'attr': {'class': 'input-lg'}}) }}
-    {{ form_row(form.meta_description, {'attr': {'class': 'input-lg'}}) }}
+    {{ form_row(form.title) }}
+    {{ form_row(form.meta_keywords) }}
+    {{ form_row(form.meta_description) }}
+    {{ form_row(form.phones) }}
     {{ form_rest(form) }}
     {{ update() }}
 </form>
