--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
@@ -1,18 +1,23 @@
 {% extends 'SyliusWebBundle:Frontend:layout.html.twig' %}
 
-{% set form = sylius_cart_form({'product': product}) %}
+{# {% set form = sylius_cart_form({'product': product}) %} #}
 
 {% block content %}
-<div class="row">
-    <div class="col-md-3">
-        <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}" class="thumbnail">
-            <img src="{{ product.image ? product.image.path|imagine_filter('sylius_200x200') : 'http://placehold.it/200x200' }}" alt="{{ product.name }}" />
+<div class="row product-box single-product">
+    <div class="thumbnail">
+        <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}">
+            <img class="img-rounded" src="{{ product.image ? product.image.path|imagine_filter('sylius_200x200') : 'http://placehold.it/200x200' }}" alt="{{ product.name }}" />
         </a>
+        <div class="caption">
+            <h3>{{ product.name }}</h3>
+            <p>{{ product.shortDescription|default('sylius.product.no_description')|trans|raw }}</p>
+            <div>
+                <h4>{{ 'sylius.product.description'|trans }}</h4>
+                <p>{{ product.description|default('sylius.product.no_description')|trans|raw }}</p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-9">
-        <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}" class="btn btn-link"><h3>{{ product.name }}</h3></a>
-        <p>{{ product.shortDescription|default('sylius.product.no_description')|trans|raw }}</p>
-    </div>
+    <span class="shop-product-price label label-info">{{ product.price|sylius_price }}</span>
 </div>
 {% if product.images|length > 0 %}
 <hr>
@@ -45,13 +50,9 @@
         </table>
         {% endif %}
     </div>
-    <div class="col-md-6">
-        <h4>{{ 'sylius.product.description'|trans }}</h4>
-        <p>{{ product.description|default('sylius.product.no_description')|trans|raw }}</p>
-    </div>
 </div>
 <hr>
-<div class="row">
+{# <div class="row">
     <form action="{{ path('sylius_cart_item_add', {'id': product.id}) }}" method="post" class="clearfix form-horizontal">
     {% if product.hasVariants %}
         <div class="col-md-6">
@@ -115,5 +116,5 @@
         {% endif %}
     </div>
 </form>
-</div>
+</div> #}
 {% endblock %}
