Add grid for paginated output of products by taxon.

--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/_single.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/_single.html.twig
@@ -15,12 +15,12 @@
                 <br />
                 <span class="label label-important">{{ 'sylius.out_of_stock'|trans }}</span>
             {% else %}
-                <form action="{{ path('sylius_cart_item_add', {'id': product.id}) }}" method="post" class="clearfix">
+                {# <form action="{{ path('sylius_cart_item_add', {'id': product.id}) }}" method="post" class="clearfix">
                     {% set form = sylius_cart_form({'product': product}) %}
                     {{ form_widget(form.quantity, {'attr': {'class': 'center-text'}, 'empty_value': '1'}) }}
                     {{ form_widget(form._token) }}
                     <button type="submit" class="btn btn-success"><i class="icon-shopping-cart icon-white"></i> {{ 'sylius.add_to_cart'|trans }}</button>
-                </form>
+                </form> #}
             {% endif %}
             </div>
         {% endif %}
