--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/indexByTaxon.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/indexByTaxon.html.twig
@@ -1,16 +1,17 @@
 {% extends 'SyliusWebBundle:Frontend:layout.html.twig' %}
 
-{% import 'SyliusWebBundle:Frontend/Macros:buttons.html.twig' as buttons %}
+{# {% import 'SyliusWebBundle:Frontend/Macros:buttons.html.twig' as buttons %} #}
 {% from 'SyliusWebBundle:Frontend/Macros:misc.html.twig' import pagination %}
-{% from 'SyliusWebBundle:Frontend/Product:macros.html.twig' import list %}
+{# {% from 'SyliusWebBundle:Frontend/Product:macros.html.twig' import list %} #}
+{% from 'SyliusWebBundle:Frontend/Product:macros.html.twig' import grid %}
 
 {% block content %}
 <div class="page-header">
     <h1>{{ 'sylius.product.index_by_taxon_header'|trans({'%taxon%': taxon.name})|raw }}</h1>
 </div>
 
-{{ pagination(products) }}
-{{ list(products) }}
+{# {{ pagination(products) }} #}
+{{ grid(products) }}
 {{ pagination(products) }}
 
 {% endblock %}
