--- a/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
+++ b/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
@@ -6,6 +6,9 @@ body {
     font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
+.alert {
+    margin-top: 60px!important;
+}
 .container > .row.row-background {
     position: fixed;
     display: block;
