--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/update.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/update.html.twig
@@ -28,7 +28,7 @@
 
 {{ form_errors(form) }}
 
-<form action="{{ path('sylius_backend_promotion_update', {'id': promotion.id}) }}" method="post" class="form-horizontal" novalidate enctype="multipart/form-data">
+<form action="{{ path('sylius_backend_promotion_update', {'id': promotion.id}) }}" method="post" class="form-horizontal" novalidate {{ form_enctype(form) }}>
     <input type="hidden" name="_method" value="PUT">
     {% include 'SyliusWebBundle:Backend/Promotion:_form.html.twig' %}
     {{ update() }}
