show on dashboard

--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
@@ -9,6 +9,8 @@
     {# {{ form_row(form.masterVariant.availableOnDemand) }} #}
     {# {{ form_row(form.restrictedZone) }} #}
     {{ form_row(form.masterVariant.price) }}
+    {{ form_row(form.showOnHomepage) }}
+    {# {{ form.get('showOnHomepage') }} #}
     {# {{ form_row(form.masterVariant.onHand) }} #}
     {# <hr /> #}
     {# {{ form_row(form.taxCategory) }} #}
