--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/show.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/show.html.twig
@@ -62,10 +62,10 @@
                     <td>{{ 'sylius.product.name'|trans }}</td>
                     <td>{{ product.name }}</td>
                 </tr>
-                {# <tr>
-                    <td>{{ 'sylius.product.available_on'|trans }}</td>
-                    <td><span class="label label-{{ product.available ? 'success' : 'danger' }}">{{ product.availableOn|date }}</span></td>
-                </tr> #}
+                <tr>
+                    <td>{{ 'Показывать на главной'|trans }}</td>
+                    <td><span class="label label-{{ product.showOnHomePage ? 'success' : 'danger' }}">{{ (product.showOnHomePage) ? 'Да' : 'Нет' }}</span></td>
+                </tr>
                 <tr>
                     <td>{{ 'sylius.product.options'|trans }}</td>
                     <td>
