is new product option

--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
@@ -10,6 +10,7 @@
     {# {{ form_row(form.restrictedZone) }} #}
     {{ form_row(form.masterVariant.price) }}
     {{ form_row(form.showOnHomepage) }}
+    {{ form_row(form.isNew) }}
     {# {{ form.get('showOnHomepage') }} #}
     {# {{ form_row(form.masterVariant.onHand) }} #}
     {# <hr /> #}
