--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/filterForm.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/filterForm.html.twig
@@ -1,7 +1,8 @@
 {% form_theme form 'SyliusWebBundle:Backend:filterForms.html.twig' %}
 
 <form method="get" action="{{ path('sylius_backend_product_index') }}" class="form-inline form-filter">
-{{ form_row(form.name) }}
-{{ form_row(form.sku) }}
-<button type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-search"></i> {{ 'sylius.filter'|trans }}</button>
+    {{ form_row(form.name) }}
+    {{ form_row(form.sku) }}
+    <button type="submit" class="btn btn-primary"><i class="glyphicon glyphicon-search"></i> {{ 'sylius.filter'|trans }}</button>
+    <a class="btn" href="{{ path('sylius_backend_product_index') }}">{{ 'sylius.reset'|trans }}</a>
 </form>
