Create new product badge. Change empty image placeholders. Fix promotions admin.

--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/show.html.twig
@@ -6,7 +6,7 @@
 <div class="row product-box single-product">
     <div class="thumbnail">
         <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}">
-            <img class="img-rounded" src="{{ product.image ? product.image.path|imagine_filter('sylius_200x200') : 'http://placehold.it/200x200' }}" alt="{{ product.name }}" />
+            <img class="img-rounded" src="{{ product.image ? product.image.path|imagine_filter('sylius_200x200') : 'http://placehold.it/200x200/D7BB79/AF8524' }}" alt="{{ product.name }}" />
         </a>
         <div class="caption">
             <h3>{{ product.name }}</h3>
