--- a/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
+++ b/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
@@ -132,6 +132,70 @@ div.product-box {
     position: relative;
     margin-bottom: 20px;
 }
+
+div.product-box .shop-product-new-badge {
+    position: absolute;
+    background-color: #E4371B;
+    box-shadow: 0px 0px 38px -10px #000;
+    text-align: center;
+    font-size: 16px;
+    line-height: 45px;
+    font-weight: 800;
+    width: 45px;
+    height: 45px;
+    border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    color: #FFF;
+    top: -8px;
+    left: -8px;
+    z-index: 13;
+}
+div.product-box .shop-product-new-badge:before {
+    content: "";
+
+    position: absolute;
+    background: #E4371B;
+    border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    top: 0;
+    left: 0;
+    transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    width: 45px;
+    height: 45px;
+    z-index: -2;
+}
+div.product-box .shop-product-new-badge:after {
+    content: "";
+
+    position: absolute;
+    background: #E4371B;
+    border-radius: 0.5em;
+    -webkit-border-radius: 0.5em;
+    -moz-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
+    -o-border-radius: 0.5em;
+    top: 0;
+    left: 0;
+    -webkit-transform: rotate(-30deg);
+    -moz-transform: rotate(-30deg);
+    -ms-transform: rotate(-30deg);
+    -o-transform: rotate(-30deg);
+    transform: rotate(-30deg);
+    width: 45px;
+    height: 45px;
+    z-index: -2;
+}
+
 div.product-box.single-product {
     padding: 0;
     width: 100%;
