--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/_form.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/_form.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        {{ form_row(form.name, {'attr': {'class': 'input-lg'}}) }}
+        {{ form_row(form.name) }}
         {{ form_row(form.description) }}
         {# {{ form_row(form.usageLimit) }} #}
         {{ form_row(form.startsAt) }}
