--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/_singleBox.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Product/_singleBox.html.twig
@@ -1,7 +1,10 @@
 <div class="product-box">
+    {% if product.isNew %}
+        <div class="shop-product-new-badge">new!</div>
+    {% endif %}
     <div class="thumbnail">
         <a href="{{ path('sylius_product_show', {'slug': product.slug}) }}">
-            <img class="img-responsive" src="{{ product.image ? product.image.path|imagine_filter('sylius_262x255') : 'http://placehold.it/262x255' }}" alt="{{ product.name }}" />
+            <img class="img-responsive" src="{{ product.image ? product.image.path|imagine_filter('sylius_262x255') : 'http://placehold.it/262x255/D7BB79/AF8524' }}" alt="{{ product.name }}" />
             <span class="shop-product-price label label-info">{{ product.price|sylius_price }}</span>
         </a>
         <div class="caption">
