--- a/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
+++ b/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
@@ -135,7 +135,8 @@ div.product-box {
 
 div.product-box .shop-product-new-badge {
     position: absolute;
-    background-color: #E4371B;
+    /*background-color: #E4371B;*/
+    background-color: #D1D82C;
     box-shadow: 0px 0px 38px -10px #000;
     text-align: center;
     font-size: 16px;
@@ -157,7 +158,8 @@ div.product-box .shop-product-new-badge:before {
     content: "";
 
     position: absolute;
-    background: #E4371B;
+    /*background: #E4371B;*/
+    background: #D1D82C;
     border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
@@ -178,7 +180,8 @@ div.product-box .shop-product-new-badge:after {
     content: "";
 
     position: absolute;
-    background: #E4371B;
+    /*background: #E4371B;*/
+    background: #D1D82C;
     border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
