--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/macros.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Promotion/macros.html.twig
@@ -45,7 +45,7 @@
                 <td>{{ promotion.startsAt is empty ? '-' : promotion.startsAt|date }}</td>
                 <td>{{ promotion.endsAt is empty ? '-' : promotion.endsAt|date }}</td>
                 <td>
-                    <div class="pull-right">
+                    <div class="pull-right" style="width: 288px;">
                         {{ buttons.show(path('sylius_backend_promotion_show', {'id': promotion.id})) }}
                         {{ buttons.edit(path('sylius_backend_promotion_update', {'id': promotion.id})) }}
                         {{ buttons.delete(path('sylius_backend_promotion_delete', {'id': promotion.id})) }}
