--- a/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
+++ b/src/Sylius/Bundle/WebBundle/Resources/assets/css/frontend.css
@@ -309,9 +309,9 @@ div.product-box {
 
 div.product-box .shop-product-new-badge {
     position: absolute;
-    /*background-color: #E4371B;*/
-    background-color: #D1D82C;
-    box-shadow: 0px 0px 38px -10px #000;
+    background-color: #E4371B;
+    /*background-color: #D1D82C;*/
+    box-shadow: 0px 0px 30px -10px #000;
     text-align: center;
     font-size: 16px;
     line-height: 45px;
@@ -325,15 +325,15 @@ div.product-box .shop-product-new-badge {
     -o-border-radius: 0.5em;
     color: #FFF;
     top: -8px;
-    left: -8px;
+    left: -16px;
     z-index: 13;
 }
 div.product-box .shop-product-new-badge:before {
     content: "";
 
     position: absolute;
-    /*background: #E4371B;*/
-    background: #D1D82C;
+    background: #E4371B;
+    /*background: #D1D82C;*/
     border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
@@ -354,8 +354,8 @@ div.product-box .shop-product-new-badge:after {
     content: "";
 
     position: absolute;
-    /*background: #E4371B;*/
-    background: #D1D82C;
+    background: #E4371B;
+    /*background: #D1D82C;*/
     border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     -moz-border-radius: 0.5em;
