--- a/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Backend/Product/Form/_main.html.twig
@@ -11,6 +11,7 @@
     {{ form_row(form.masterVariant.price) }}
     {{ form_row(form.showOnHomepage) }}
     {{ form_row(form.isNew) }}
+    {{ form_row(form.isRecommended) }}
     {# {{ form.get('showOnHomepage') }} #}
     {# {{ form_row(form.masterVariant.onHand) }} #}
     {# <hr /> #}
