--- a/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Homepage/main.html.twig
+++ b/src/Sylius/Bundle/WebBundle/Resources/views/Frontend/Homepage/main.html.twig
@@ -15,6 +15,6 @@
 
 {{ render(controller('SyliusPromotionsBundle:Promo:promoBlock')) }}
 
-{{ render(url('sylius_partial_product_latest', {'limit': 9, 'template': 'SyliusWebBundle:Frontend/Product:latest.html.twig'})) }}
+{{ render(url('sylius_partial_product_latest', {'limit': {'limit': 9, 'block' : 'homepage'}, 'template': 'SyliusWebBundle:Frontend/Product:latest.html.twig'})) }}
 
 {% endblock %}
